[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gta-self-radio-spotify-relay"
version = "1.0.0"
description = "Sync Spotify playlists to GTA V Self Radio by downloading audio from YouTube"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GTA Self Radio Relay" }]
dependencies = [
    "spotipy>=2.23.0",
    "yt-dlp>=2024.1.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "mutagen>=1.47.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "cryptography>=41.0.0",
]

[project.scripts]
gta-radio = "gta_radio.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
